# KiNotes

./: .gitignore  CHANGELOG.md  CLEANUP_FIX_APPLIED.md  LICENSE  NOTICE  README.md  build_pcm_package.py  debug_standalone.py  pyproject.toml  run_kicad_with_console.bat  test_net_linker_integration.py  test_visual_editor.py  update_kicad_plugin.bat  verify_installation.py
.github/: FUNDING.yml  NET_LINKER_BETA.md  NET_LINKER_VISUAL_EDITOR_INTEGRATION.md  PHASE_4_COMPLETION.md  copilot-instructions.md
KiNotes/: __init__.py  __version__.py  features.md  kinotes_action.py  metadata.json
KiNotes/core/: __init__.py  component_tooltip.py  crash_safety.py  defaultsConfig.py  designator_linker.py  format_store.py  global_settings.py  image_handler.py  metadata_extractor.py  net_cache_manager.py  net_linker.py  notes_manager.py  pdf_exporter.py
KiNotes/ui/: __init__.py  bom_dialog.py  debug_event_logger.py  main_panel.py  markdown_converter.py  markdown_editor.py  scaling.py  styles.py  themes.py  time_tracker.py  toolbar.py  visual_editor.py
KiNotes/ui/components/: __init__.py  buttons.py  icons.py
KiNotes/ui/dialogs/: __init__.py  about_dialog.py  fab_import_dialog.py  settings_dialog.py
KiNotes/ui/tabs/: __init__.py  bom_tab.py  todo_tab.py  version_log_tab.py
docs/: crash_safety_implementation.md  crash_safety_system.md  crash_safety_user_guide.md  default_settings.md  how_to_capture_console_output.md  memory_leak_prevention.md  troubleshooting_plugin_not_appearing.md
